# siray-python

./: QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  verify_sdk.py
.github/workflows/: publish.yml
examples/: blocking_generation.py  error_handling.py  file_upload.py  image_generation.py  video_generation.py
siray/: __init__.py  base_client.py  client.py  exceptions.py  models.py
siray/resources/: __init__.py  file.py  files.py  image.py  video.py
siray/upload/: __init__.py  s3_uploader.py
tests/: __init__.py  test_client.py  test_exceptions.py
